*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 0.5.2 ===

=== 0.5.1 ===
* Updated build system.

=== 0.5.0 ===

* Initial version of 3rd party libraries